--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
+    "mdbootstrap": "^4.19.2",
+    "mdbreact": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-js-pagination": "^3.0.3",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.7.1",
