--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "font-awesome": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-event-timeline": "^1.6.3",
+    "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.7.1",
