--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-event-timeline": "^1.6.3",
     "react-read-more-read-less": "^1.0.7",
