edit profile,page not found,move modal

--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "mdbootstrap": "^4.19.2",
     "mdbreact": "^5.0.0",
     "react": "^17.0.1",
+    "react-avatar": "^3.9.7",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-hider": "^1.0.3",
     "react-images-upload": "^1.2.8",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-share": "^4.3.1",
     "reactstrap": "^8.7.1",
     "web-vitals": "^0.2.4"
   },
