--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
-    "mdbootstrap": "^4.19.2",
-    "mdbreact": "^5.0.0",
     "react": "^17.0.1",
     "react-avatar": "^3.9.7",
     "react-copy-to-clipboard": "^5.0.2",
@@ -20,7 +19,6 @@
     "react-images-upload": "^1.2.8",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
-    "react-loading-skeleton": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-share": "^4.3.1",
