--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-avatar": "^3.9.7",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-event-timeline": "^1.6.3",
     "react-hider": "^1.0.3",
     "react-images-upload": "^1.2.8",
     "react-js-pagination": "^3.0.3",
     "react-loading": "^2.0.3",
-    "react-event-timeline": "^1.6.3",
+    "react-number-format": "^4.4.1",
     "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
